Added results validator and removed results input from Game create form. We're never going to be adding results when we add the game.

--- a/TournamentManager.Web/Pages/Settings/Games/Create.razor
+++ b/TournamentManager.Web/Pages/Settings/Games/Create.razor
@@ -8,5 +8,5 @@
 <h3>Create</h3>
 
 <CascadingValue Value="Game">
-    <GameForm OnSubmit="OnSubmit" OnCancel="OnCancel" GameTypes="GameTypes" Venues="Venues" Seasons="Seasons" />
+    <GameForm OnSubmit="OnSubmit" OnCancel="OnCancel" GameTypes="GameTypes" Venues="Venues" Seasons="Seasons" IsEditing="false" />
 </CascadingValue>
