--- a/TournamentManager.Web/Pages/Settings/Games/GameForm.razor
+++ b/TournamentManager.Web/Pages/Settings/Games/GameForm.razor
@@ -115,81 +115,88 @@
         <button class="btn btn-secondary" type="button" @onclick="OnCancel">Back</button>
     </EditForm>
 
-    <div class="row">
-        <div class=col-12>
-            <h3 style="margin-top: 20px;">Results</h3>
-        </div>
-    </div>
-
-    <EditForm Model="result" OnValidSubmit="AddResult">
-        <FluentValidationValidator />
-
-        <div class="row" style="margin-bottom:10px;">
-            <div class="col-2">
-                <label for="position" class="form-label">Position</label>
-                <InputNumber class="form-control" id="position" @bind-Value="result.Position" disabled />
+    // We'll never be adding results at the same time we're creating a form. Hide it if we're not editing.
+    @if (IsEditing)
+    {
+        <div class="row">
+            <div class=col-12>
+                <h3 style="margin-top: 20px;">Results</h3>
             </div>
+        </div>
 
-            <div class="col-4">
-                <label for="player" class="form-label">Player</label>
-                <InputSelect class="form-control" id="player" @bind-Value="result.PlayerId" @bind-Value:after="OnPlayerChanged">
-                    <option value="">Select Player...</option>
-                    @if (Players != null)
-                    {
-                        foreach (Player player in Players)
+        <EditForm Model="result" OnValidSubmit="AddResult">
+            <FluentValidationValidator />
+
+            <div class="row" style="margin-bottom:10px;">
+                <div class="col-2">
+                    <label for="position" class="form-label">Position</label>
+                    <InputNumber class="form-control" id="position" @bind-Value="result.Position" disabled />
+                </div>
+
+                <div class="col-4">
+                    <label for="player" class="form-label">Player</label>
+                    <InputSelect class="form-control" id="player" @bind-Value="result.PlayerId" @bind-Value:after="OnPlayerChanged">
+                        <option value="">Select Player...</option>
+                        @if (Players != null)
                         {
-                            <option value="@player.Id">@player.FirstName @player.LastName</option>
+                            foreach (Player player in Players)
+                            {
+                                <option value="@player.Id">@player.FirstName @player.LastName</option>
+                            }
                         }
-                    }
-                </InputSelect>
-                <ValidationMessage For="() => result.PlayerId" />
-            </div>
+                    </InputSelect>
+                    <ValidationMessage For="() => result.PlayerId" />
+                </div>
 
-            <div class="col-2">
-                <label for="cash" class="form-label">Cash</label>
-                <InputNumber class="form-control" id="cash" @bind-Value="result.Cash" />
-                <ValidationMessage For="() => result.Cash" />
-            </div>
+                <div class="col-2">
+                    <label for="cash" class="form-label">Cash</label>
+                    <InputNumber class="form-control" id="cash" @bind-Value="result.Cash" />
+                    <ValidationMessage For="() => result.Cash" />
+                </div>
 
-            <div class="col-1">
-                <label for="add-button" class="form-label">&nbsp;</label>
-                <button id="add-button" class="btn btn-primary form-control" type="submit">Add</button>
+                <div class="col-1">
+                    <label for="add-button" class="form-label">&nbsp;</label>
+                    <button id="add-button" class="btn btn-primary form-control" type="submit">Add</button>
+                </div>
             </div>
-        </div>
-    </EditForm>
+        </EditForm>
 
-    <div class="row">
-        <div class="col-12">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Position</th>
-                        <th>Player</th>
-                        <th>Points</th>
-                        <th>Cash</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (Result result in Game.Results.OrderBy(p => p.Position))
-                    {
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-striped">
+                    <thead>
                         <tr>
-                            <td>@result.Position</td>
-                            <td>@result.Player!.FirstName @result.Player!.LastName</td>
-                            <td>@result.Points</td>
-                            <td>@result.Cash</td>
-                            <td><button class="btn btn-sm btn-danger" @onclick="() => RemoveResult(result)" type="button">Remove</button></td>
+                            <th>Position</th>
+                            <th>Player</th>
+                            <th>Points</th>
+                            <th>Cash</th>
+                            <th></th>
                         </tr>
-                    }
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        @foreach (Result result in Game.Results.OrderBy(p => p.Position))
+                        {
+                            <tr>
+                                <td>@result.Position</td>
+                                <td>@result.Player!.FirstName @result.Player!.LastName</td>
+                                <td>@result.Points</td>
+                                <td>@result.Cash</td>
+                                <td><button class="btn btn-sm btn-danger" @onclick="() => RemoveResult(result)" type="button">Remove</button></td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
+    }
 }
 
 @code {
     [Inject]
     IPositionFactory _positionFactory { get; set; } = default!;
+
+    [Parameter]
+    public bool IsEditing { get; set; }
 
     [CascadingParameter]
     Game? Game { get; set; }
