--- a/TournamentManager.Web/_Imports.razor
+++ b/TournamentManager.Web/_Imports.razor
@@ -10,6 +10,7 @@
 @using TournamentManager.Web.Shared
 @using TournamentManager.Web.Services;
 @using Blazorise
+@using Blazorise.Components
 @using Blazorise.DataGrid
 @using Blazorise.LoadingIndicator
 @using Blazored.FluentValidation
